3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Whitespace and long-line cleanup
 socket/item.c
 socket/image.c
Aaron Baugher 2007-02-15

server/shop.c: handle "no money" case when player tries to exit shop.
---
Fix a crash with object handling by plugins.
 cfpython/cfpython_map.c: don't assume op exists after inserting in map.
Ryo 2007-02-15

Remove static buffers from path_combine and path_combine_and_normalize.
 common/path.c map.c
 include/libproto.h path.h
 server/server.c
 utils/mapper.c
---
 common/map.c: add buffer's size to prevent overflows.
Ryo 2007-02-14

Invalidate player's view if teleporting. Call update_ob_speed when changing speed.
 server/plugins.c
Ryo 2007-02-12

Remove unused field object::refcount from unit testing
    test/unit/check_object.c
gros 2007-02-12

lib/smooth updated in conjunction with arch update (revision 5421).
Kevin Bulgrien 2007-02-11

Remove unused field object::refcount.
 common/object.c
 include/object.c plugins.h
 server/plugins.c
Fix speed logic, implementing feature request #1624544: Armour speed limit
 common/living.c
Fix missing call, resulting in corrupted output.
 server/c_object.c
Fix mishandling of weapon/shield/armour restriction. Fix crash with NULL value.
 server/gods.c
Ryo 2007-02-11

Formatting clean-up:
 server/apply.c: fixed indentation, untabified, broke long lines
Aaron Baugher 2007-02-11


Make armour handling coherent between gods, monsters and such.
Cloaks and bracers are not armour.
 common/item.c utils.c: fix tests with macros.
 include/define.h: update macro, new IS_SHIELD.
 server/apply.c monster.c player.c: use macros.
Ryo 2007-02-11

Remove last static buffers, use safe string functions.