@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+New server settings: allow_denied_spells_writing, for inscription.
+ common/init.c
+ include/global.h
+ server/init.c skills.c
+Ryo 2007-02-15
+
 Whitespace and long-line cleanup
  socket/item.c
  socket/image.c
